# architex_poc

./: architex.py  check.json  compose.yaml  compose_parse.py  draw.py  nginx.conf  nginx.json  nginx_parse.py  pyproject.toml  tbd.py
Architex/: __main__.py  cli.py  config.py  controller.py  database.py  rptodo.py
repos/bapenda/: docker-compose(api).yml  docker-compose(directus-geo).yml  docker-compose(main).yml
repos/bhumi/: docker-compose.yaml  nginx.conf
repos/disparbud/portal/: docker-compose.yml  nginx.conf
repos/disparbud/tcc/: docker-compose.yml  nginx.conf
repos/disparbud/tcc/storage/: docker-compose.yml
repos/geo/: draw.py  nginx.json
repos/geod/: compose.yml  docker-compose.yml  nginx.conf
repos/inaland/: compose.yml  docker-compose.yml  nginx.conf
repos/kemlu/: docker-compose.yaml  nginx.conf
repos/madina/: docker-compose.yml  nginx.conf
repos/mattermost/: docker-compose.without-nginx.yml
repos/petmil/: docker-compose.yml  nginx.conf
repos/uno/: compose.yaml
tests/: test_architex.py  test_rptodo.py
tests/input/bapenda/: docker-compose(minio1).yml  docker-compose(minio2).yml  docker-compose(postgis).yml
tests/input/bapenda/nginx/: nginx-prod.conf
tests/input/disparbud/tcc/: docker-compose.yml
tests/input/geo/: compose.json
tests/input/hyundai/: docker-compose.yml  nginx.conf
tests/input/kemlu/: compose.yaml  compose.yml
tests/input/madina/: docker-compose.yml
tests/input/mattermost/: docker-compose.nginx.yml
tests/input/petmil/: compose.yml
tests/input/sipulau/: docker-compose.yml
tests/input/uno/: nginx.conf
(+1 files in other folders)
