[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Miko <jherjati@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
diagrams = "^0.23.3"
crossplane = "^0.5.8"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
